objects/PayPal_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Error_email_address__c</fullName>
        <label>Error email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Paypal_Account_Email__c</fullName>
        <label>Paypal Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <inlineHelpText>This is the API name of the pricebook available to customers</inlineHelpText>
        <label>Pricebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PayPal Settings</label>
</CustomObject>